--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,9 +44,12 @@ ul {
     padding: 0;
     overflow: hidden;
 }
-
+.nav a:hover {
+    color: teal;
+}
 li {
     float: right;
+    color: grey;
 }
 
 li a {
@@ -71,10 +74,21 @@ li a {
 p {
     line-height: 1.5em;
 }
-body {
-    
+
+/* Contact Section */
+#tealButton {
+    background-color: teal;
+    margin-top: 20px;
+    border-radius: 10px;
 }
 
+#message {
+    width: 100%;
+    height: 200px;
+}
+.textArea {
+    width: 100%;
+}
 
 /* Footer */
 .centerText {
