--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@
     background-color: #4aaaa5;
     color: white;
     margin: 10px 0 20px;
-    padding: 20px 25px;
+    padding: 15px 20px;
 }
 
 h2 {
@@ -99,4 +99,49 @@ footer {
     border-top: teal 5px solid;
     margin: 40px 0 0;
     color: white;
+}
+
+/* Font */
+h1 {
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-size: 1.3em;
+}
+body {
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Portfolio Image Layout */
+#biopic {
+    display: block;
+    border-top: grey;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    background-color: white;
+    padding: 20px 0px 260px 50px;
+}
+#pic1 {
+    margin: 10px 20px 10px 10px;
+    border-bottom: #4aaaa5 solid 40px;
+}
+#pic2 {
+    margin: 10px 20px 10px 10px;
+    border-bottom: #4aaaa5 solid 40px;
+}
+#pic3 {
+    position: relative;
+    top: 263px;
+    right: 235px;
+    margin: 10px 20px 10px 10px;
+    border-bottom: #4aaaa5 solid 40px;
+}
+#pic4 {
+    margin: 10px 20px 10px 10px;
+    position: relative;
+    top: 525px;
+    right: 703px;
+    border-bottom: #4aaaa5 solid 40px;
+}
+#pic5 {
+    margin: 10px 20px 10px 10px;
+    border-bottom: #4aaaa5 solid 40px;
 }
